Extra credit work

--- a/neighborhood.html
+++ b/neighborhood.html
@@ -18,8 +18,8 @@
 				<ul id="countries">
                     <li><a href="https://orem.org/parks/">Parks</a></li>
                     <li><a href="https://www.haletheater.org/">Hale Center</a></li>
-                    
 				</ul>
+                <button id="restaurant" class="button">Restaurant Recommendation</button>
 			</div>
 	</body>
 </html>
